--- a/style/timeline/timeline-custom.less
+++ b/style/timeline/timeline-custom.less
@@ -37,6 +37,14 @@ div.timeline-groups-text{
             cursor: pointer;
             background-color: lighten(grey, 40%)
         }
+        
+        div.content{
+            width: 125px;
+            overflow: hidden;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
     
     &.selected {
